# robot_sf_ll7

./: .coderabbit.yaml  .coverage  .cursorrules  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  ACKNOWLEDGMENTS.md  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_RECOMMENDATION.md  Dockerfile  EXTENDED_VALIDATION_INDEX.md  EXTENDED_VALIDATION_REPORT.md  GLOBAL_PLANNER_SUMMARY_FOR_USER.md  GLOBAL_PLANNER_VERIFICATION.md  GPU_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  PHASE_1_COMPLETION_CHECKLIST.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_DELIVERABLES_MANIFEST.md  PHASE_1_DOCUMENTATION_INDEX.md  PHASE_1_FINAL_SUMMARY.md  PHASE_1_QUICK_REFERENCE.md  PHASE_1_STATUS_REPORT.md  PHASE_2A_COMPLETION_REPORT.md  PHASE_2C_PROGRESS_T027.md  PHASE_2C_SESSION_SUMMARY.md  PHASE_2C_SESSION_T028.md  PHASE_2C_STATUS_REPORT.md  (+45 more)
.agent/: PLANS.md
.agents/: PLANS.md  README.md  mirror_manifest.yaml
.claude/: CLAUDE.md
.codex/: .gitignore  config.toml  internal_storage.json  prompts
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.md  host_os.sh  postCreate.sh  pygame_script.py  readme.md
.github/: agents  copilot-instructions.md  dependabot.yml  prompts
.specify/: constitution.prompt.md
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
SLURM/: AGENTS.md  helpful_slurm_commands.md  issue_403_train_expert_ppo_grid.sl  load_module.sh  log_gpu_cpu_usage.py  partition_queue.sh  partition_queue_start_time.sh  readme.md  set_email_env_variable.sh  slurm_PPO_robot_sf.py  slurm_train.sl  submit_feature_extractor_fixed_candidates.sh  submit_feature_extractor_sweep.sh  submit_release_campaign_arm.sh  submit_release_single_node.sbatch  user_queue.sh
benchmarks/: ammv_benchmark_v0.yaml
class_diagram/: generate_uml.sh
docker/: benchmark-repro.Dockerfile
docs/: AGENT_INDEX.md  DATA_ANALYSIS.md  ENVIRONMENT.md  MAP_EDITOR_USAGE.md  OSM_map_converter.md  README.backup.md  README.md  RELEASE.md  SIM_VIEW.md  SUBTREE_MIGRATION.md  SVG_MAP_EDITOR.md  UV_MIGRATION.md  VIDEO_EVALUATION.md  actuator_feasibility.md  add_routes_to_osm_svg.md  adoption_path.md  agent_run_manifest.md  artifact_catalog.md  assurance_fragments.md  baseline_table.md  benchmark.md  benchmark_artifact_publication.md  benchmark_camera_ready.md  benchmark_camera_ready_release.md  benchmark_campaign_manifest.md  benchmark_docker_repro.md  benchmark_experimental_planners.md  benchmark_full_classic.md  benchmark_governance.md  benchmark_observation_visibility.md  benchmark_planner_family_coverage.md  benchmark_planner_quality_audit.md  benchmark_pr_promoted_planner_smoke.md  benchmark_release_0_0_2_reproduction.md  benchmark_release_protocol.md  benchmark_release_reproducibility.md  benchmark_risk_layer_ablation.md  benchmark_spec.md  benchmark_static_dashboard.md  benchmark_suites.md  (+63 more)
example/: robot_test.py
examples/: README.md  __init__.py  classic_interactions_pygame.py  data_analysis_example.py  demo_aggregate.py  demo_defensive.py  demo_factory_options.py  demo_feature_extractors.py  demo_full_classic_benchmark.py  demo_offensive.py  demo_pedestrian.py  demo_pedestrian_updated.py  demo_refactored_environments.py  demo_robot_sf_bench_ppo.py  demo_social_nav_scenarios.py  demo_utils.py  demonstrate_2x_speed_fix.py  ego_ped_example.py  ex07_map05_u_around_center.py  ex08_convert_maps.py  ex09_inkscape_svg_map.py  example03.py  example04.py  example05.py  example06.py  example_multi_pedestrian.py  example_osm_svg_to_obstacle_svg.py  example_single_pedestrian.py  examples_manifest.yaml  extract_recording_to_csv_trajectories.py  image_observation_demo.py  interactive_playback_demo.py  occupancy_reward_shaping.py  osm_map_editor_demo.py  osm_map_quickstart.py  osm_programmatic_scenario.py  plot_force_field.py  plot_force_field_normalized.py  plot_force_field_save.py  plot_pareto.py  (+10 more)
experiments/: README.md  issue_1108_bc_warm_start_ppo.yaml  issue_1151_manual_control_mvp_collection.yaml  issue_1236_adversarial_optimizer_sampler.yaml  issue_1470_oracle_imitation_dataset_collection.yaml  issue_1475_orca_residual_bc_lineage_smoke.yaml  issue_1488_adversarial_search_synthesis.yaml  issue_1585_amv_actuation_provenance_lane.yaml  issue_1610_perturbation_criticality_synthesis.yaml  issue_2128_heldout_family_transfer_pilot.yaml  issue_2135_seed_sufficiency_followup.yaml  issue_2441_oracle_imitation_trace_finalize.yaml  issue_3193_closed_loop_forecast_falsification.yaml  issue_6095_s10_discriminability_calibration.yaml  registry.yaml  run_ready_manifest.yaml  submission_queue.yaml
fast-pysf/: .gitignore  README.md  pyproject.toml
hooks/: __init__.py  check_config_abs_paths.py  check_config_provenance.py  check_release_assurance_hashes.py  prevent_schema_duplicates.py
map_editor/: README.md  __main__.py  map_editor.py  map_example.json  map_file_parser.py
maps/: map02.json  map03.json  map04.json  registry.yaml
memory/: MEMORY.md  architecture_overview.md  benchmark_platform_status.md  project_sac_action_semantics.md  research_status.md
model/: registry.md  registry.yaml  snqi_canonical_weights_v1.json
notebooks/: 01_run_first_episode.ipynb  02_compare_two_planners.ipynb  03_visualize_trace.ipynb  README.md
progress/: 142-aggregation-mixes-algorithms.md
pysocialforce/: config.py  forces.py  map_loader.py  map_loader_svg.py  map_osm_converter.py  ped_grouping.py  ped_population.py  sim_view.py  simulator.py
recordings/: README.md
results/: factory_perf_baseline.json  performance_smoke_test.json
robot_sf/: __init__.py  _numerical_thread_env.py  cli.py  cli_datasets.py  cli_envs.py  cli_models.py  clustering.py  errors.py  eval.py  examples_cli.py  extender_sim.py  feature_extractor.py  geometry.py  goal_sensor.py  map.py  map_config.py  map_continuous.py  navigation.py  occupancy.py  ped_behavior.py  ped_grouping.py  ped_robot_force.py  ped_spawn_generator.py  pedestrian_grouping.py  (+14 more)
(+8708 files in other folders)
