[project]
name = "robot_sf"
version = "2.0.0"
description = """
This package allows implementing a "gymnasium-style" environment
for navigating a crowd with autonomous micromobility vehicles
"""
authors = [
    {name = "Marco Tröster", email = "marco.troester.student@uni-augsburg.de"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "numpy>=1.26.4",
    "gymnasium>=0.29,<1.2",
    "numba>=0.60.0",
    "pygame>=2.6.1",
    # Machine Learning
    "stable-baselines3>=2.4.0",
    "torch>=2.5.1",
    "scikit-learn>=1.6.1",
    "optuna>=4.1.0",
    "tensorboard>=2.18.0",
    "wandb>=0.18.7",
    # Data processing
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "pillow>=10.4.0",
    "svgelements>=1.9.6",
    # Utilities
    "loguru>=0.7.2",
    "rich>=13.9.4",
    "psutil>=6.1.0",
    "toml>=0.10.2",
    "shimmy>=1.0.0,<2.0.0",
    "moviepy>=2.0.0",
    # Development tools
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "scalene>=1.5.48",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
    "setuptools>=70.0.0",
    "pysocialforce",
    "jsonschema>=4.23.0",
    "shapely>=2.1.2",
    "networkx>=2.8,<3.0",
    "pyvisgraph>=0.2.1",
    "python-motion-planning==2.0.dev1",
    # OSM map extraction (Issue #392)
    "osmnx>=1.9",
    "geopandas>=0.14",
    "pyproj>=3.6",
    "pyyaml>=6.0",
    "optuna-dashboard>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
]
gpu = [
    "torch[cuda]>=2.5.1",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
rllib = [
    "ray[rllib]>=2.53.0",
]
progress = [
    "tqdm>=4.67.0",
]
analysis = [
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
]
viz = [
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]
sacadrl = [
    "tensorflow>=2.15.0",
]
orca = [
    # Use MIT-ACL fork for ORCA: it adds a collabCoeff extension to model cooperative/adversarial behavior.
    # See https://github.com/mit-acl/Python-RVO2 for details; upstream is https://github.com/sybrenstuvel/Python-RVO2.
    # The fork is vendored under third_party/python-rvo2 to patch CMake compatibility.
    "pyrvo2",
    "Cython>=3.0.0",
]
socnav = [
    # SocNavBench planner prerequisites used by the vendored subset.
    "scikit-fmm>=2024.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = [
    { include = "robot_sf" },
    { include = "examples" },
    { include = "third_party" },
]

[tool.hatch.build.targets.wheel]
packages = [
    "robot_sf",
    "examples",
    "third_party",
]
include = ["examples/**"]

[tool.hatchling.build.targets.wheel.shared-data]
"robot_sf/maps" = "robot_sf/maps"

[tool.hatchling.build.targets.sdist]
include = [
    "/robot_sf",
    "/examples",
    "/third_party",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/tests",
    "/test_pygame",
    "/.git",
    "/.pytest_cache",
    "/__pycache__",
    "/fast-pysf",
]

[tool.hatch.metadata]
allow-direct-references = true

# Use ruff when possible
[tool.autopep8]
max_line_length = 100
verbose = false
hang-closing = true
in-place = true
recursive = true
aggressive = 4

# Use ruff when possible
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
required-version = ">=0.9.7"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    "**/*.ipynb",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "third_party",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/preview/#selecting-single-preview-rules
preview = true
explicit-preview-rules = true

select = [
  # you already have:
  "E4","E7","E9","F","W","C901","I001",

  # **Bug catchers & safety**
  "B",      # flake8-bugbear: common footguns (B006/B008/B904 are gold)
  "BLE",    # no bare/overbroad except
  "TRY",    # try/except anti-patterns (tryceratops)
  "A",      # no shadowing of builtins
  "ARG",    # unused args in public APIs
  "S",      # Bandit security checks (safe subset, see per-file ignores)

  # **Modernization & simplification**
  "UP",     # pyupgrade: keep code current
  "C4",     # flake8-comprehensions: cleaner comps/gens
  "ICN",    # canonical import aliases (np, pd, plt, etc.)

  # **Performance & correctness nits**
  "PERF",   # perflint: avoid tiny perf traps (informational)
  "PL",     # selected pylint-derived rules (see ignores below)

  # **Time handling**
  "DTZ",    # timezone-aware datetime usage

  # **Logging / prints / commented code**
  "G",      # logging format string correctness
  "T20",    # discourage print() outside scripts/tests
  "ERA",    # eradicate commented-out code

  # **Style that doesn't fight your formatter**
  "COM",    # trailing commas where helpful
  "ISC",    # implicit string concat gotchas

  # **Housekeeping**
  "RUF",    # Ruff's own rules (e.g., unused `noqa`)
  "PGH",    # blanket noqa / useless noqa hygiene
  "TCH",    # move typing-only imports under TYPE_CHECKING
  "TID",    # tidy imports (relative vs absolute)

  # Docstrings
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D417",  # Missing argument descriptions in the docstring
    "D419",  # Empty docstring
    "DOC102",  # Documented parameter {id} is not in the function's signature
    "DOC201",  # `return` is not documented in docstring
    "DOC202",  # Docstring should not have a returns section because the function doesn't return anything
]

fixable = ["ALL"]
unfixable = []

ignore = [
    # Research/scientific computing patterns that are acceptable
    "PLR0911",  # Too many return statements
    "PLR2004",  # Magic value comparison
    "S",        # Bandit security issues (too noisy for research code)
    "PGH003",   # Use specific rule codes when ignoring instead of categories
    "DTZ005",   # datetime.datetime.now() called without a 'tz' argument
    "ERA001",   # Found commented-out code
    "ARG001",   # Unused function argument
    "ARG005",   # Unused lambda argument
    "PERF401",  # Use a list comprehension to collect items
    "TRY004",   # Prefer `TypeError` exception for invalid type
    "B904",     # Within an `except` clause, raise exceptions with `raise ... from err`
    "PLW2901",  # `for` loop variable `line` overwritten by assignment target
    "TRY301",   # Abstract `raise` to an inner function
    "TRY401",   # Redundant exception object included in `logging.exception` call
    "ICN001",   # `matplotlib.pyplot` should be imported as `plt`
    "N803",     # Argument name should be lowercase
    "A005",     # Module `types` shadows a Python standard-library module
    "A001",     # Variable `id` is shadowing a Python builtin
    "G004",     # Logging statement uses f-string
    "B008",     # Do not perform function call in argument defaults
    "B023",     # Function definition does not bind loop variable
    "ISC003",   # Explicitly concatenated string should be implicitly concatenated
    "UP007",    # Use `X | Y` for type annotations
    "B007",     # Loop control variable not used within loop body
    "PLW0603",  # Using the global statement to update is discouraged
    "ARG002",   # Unused method argument
    "RUF012",   # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF001",   # String contains ambiguous `‑` (NON-BREAKING HYPHEN)
    "RUF002",   # String contains ambiguous characters (EN DASH, EM DASH)
    "RUF003",   
    "TRY300",   # Consider moving this statement to an `else` block
    "TRY003",   # Avoid specifying long messages outside the exception class
    "N806",     # Variable `X` in function should be lowercase (too noisy for math code)
    "B017",     # Do not assert blind exception: `Exception`
    "PLC0206",  # Extracting value from dictionary without calling `.items()`
    "RUF005",   # Consider iterable unpacking instead of concatenation
    "COM812",  # Missing trailing comma in a multi-line collection
    "RUF043",   # while this is harmless to fix, it creates noise for every new assertion
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-statements = 60

[tool.ruff.lint.per-file-ignores]
# Tests: allow asserts, prints, magic values, and lazy imports for optional deps
"tests/**/*.py" = [
    "S101",
    "T201",
    "PLR2004",
    "BLE001",
    "PLC0415",
    "TC001",
    "TC002",
    "D417",
    "DOC201",
]
"test_pygame/**/*.py" = [
    "S101",
    "T201",
    "BLE001",
    "PLC0415",
    "TC001",
    "TC002",
    "D417",
    "DOC201",
]
# One-off scripts / notebooks exports: allow prints and local imports for heavy deps
"scripts/**/*.py" = ["T201", "BLE001", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
# Examples, docs, and specs: similar leniencies for tutorial-style code
"examples/**/*.py" = ["T201", "BLE001", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
"docs/**/*.py" = ["T201", "BLE001", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
"specs/**/*.py" = ["T201", "BLE001", "PLC0415", "TC001", "TC002", "D417", "DOC201"]
# Misc tooling directories: ignore docstring return/arg rules
"SLURM/**/*.py" = ["D417", "DOC201"]
"hooks/**/*.py" = ["D417", "DOC201"]
"utilities/**/*.py" = ["D417", "DOC201"]
"svg_conv/**/*.py" = ["D417", "DOC201"]
"setup.py" = ["D417", "DOC201"]
# CLI tools: allow prints to stdout
"robot_sf/benchmark/cli.py" = ["T201"]
"robot_sf/benchmark/**/*" = ["BLE001"]
"robot_sf/benchmark/full_classic/visuals.py" = ["C901"]
"robot_sf/benchmark/full_classic/render_sim_view.py" = ["C901"]

# fast-pysf subtree: gradual adoption - complexity rules relaxed, allow prints in examples/benchmarks
"fast-pysf/**/*.py" = [
    "C901",    # Complex function (relax initially for existing code)
]
"fast-pysf/benchmarks/**/*.py" = ["T201", "D417", "DOC201"]  # Allow prints in benchmarks
"fast-pysf/tests/**/*.py" = ["S101", "T201", "D417", "DOC201"]  # Allow asserts and prints in tests
"fast-pysf/examples/**/*.py" = ["T201", "D417", "DOC201"]  # Allow prints in examples
"fast-pysf/pysocialforce/__init__.py" = ["F401"]  # Public API re-exports


# Allow unused variables when underscore-prefixed.
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["robot_sf", "fast-pysf/pysocialforce"]

# Omit test files and non-library code from coverage measurement
omit = [
    "*/tests/*",
    "*/test_*",
    "test_pygame/*",
    "examples/*",
    "scripts/*",
    "fast-pysf/tests/*",
    "fast-pysf/examples/*",
    "*/conftest.py",
    "*/__pycache__/*",
]
parallel = true
branch = false
data_file = "output/coverage/.coverage"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "output/coverage/htmlcov"
show_contexts = false

[tool.coverage.json]
output = "output/coverage/coverage.json"
show_contexts = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=robot_sf",
    "--cov-report=html",
    "--cov-report=json",
    "--durations=10",
]
testpaths = ["tests", "fast-pysf/tests"]
filterwarnings = [
    # Suppress external library warnings
    "ignore::UserWarning:pygame.*",
    "ignore::DeprecationWarning:pygame.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:stable_baselines3.*",
    "ignore::UserWarning:stable_baselines3.*",
    "ignore::UserWarning:gymnasium.*",
    # Keep our own warnings visible
    "default::DeprecationWarning:robot_sf.*",
    "default::UserWarning:robot_sf.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "timeout: marks tests with a timeout expectation",
]


[dependency-groups]
dev = [
    "pylint>=3.3.4",
    "pytest-xdist>=3.6.1",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
imitation = [
    "imitation>=1.0.0",
]

[project.scripts]
robot_sf_bench = "robot_sf.benchmark.cli:main"
robot-sf-migrate-artifacts = "scripts.tools.migrate_artifacts:main"

# Note: uv-specific config removed to avoid duplicate-config warnings with uv.toml

[tool.uv]
conflicts = [
    [
        { extra = "rllib" },
        { group = "imitation" },
    ],
]

[tool.uv.sources]
pysocialforce = { path = "fast-pysf", editable = true }
pyrvo2 = { path = "third_party/python-rvo2" }

[tool.ty.src]
exclude = [
    "tests",
    "test_pygame",
    "fast-pysf/tests",
    "fast-pysf/examples",
    "fast-pysf/benchmarks"
]

[tool.ty.environment]
python = "./.venv"
